2007-08-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.23 released.

        * More POD documentation and README tweaks in preparation
          for the initial roll-out of Net::FullAuto

2007-08-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.22 released.

        * Tweaked the POD documentation so that all examples
          listed will print output to the console. This was
          a potentially confusing omission.

2007-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.21 released.

        * Added error checking to trap and inform users of possible
          configuration errors in menu blocks.

        * Made changes in preparation for the release of Net::FullAuto,
          for which Term::Menus is a required module.


2007-05-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.20 released.

        * Repaired "Clear All" to actually clear all selections after
          "Select All" was used.

2006-08-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.19 released.

        * No Changes to Term::Menus - Repaired CPAN distribution

2006-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.18 released.

        * Added ability to call custom subroutine to create Text Items
          and customized Banners. When using sub menus, previous selections
          from parent menus are available for use in dynamically constructing
          the current menu. Documentation was updated to explain this new
          feature

        * Also, sub-menus now seem to work fairly reliably - so the caveat
          against their aggressive use has been removed from the documentation

2006-08-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.17 released.

        * Fixed sub menus when the ]Convey[ macro is not set

2006-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
