@@ -1210,8 +1210,7 @@ AUTHOR
     Brian M. Kelly <Brian.Kelly@fullautosoftware.net>
 
 COPYRIGHT
-    Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005 by Brian M. Kelly. All
-    rights reserved.
+    Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005 by Brian M. Kelly.
 
     This program is free software; you can redistribute it and/or modify it
     under the terms of the GNU General Public License.
